<resources>
    <string name="app_name">Madad</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_message">Chat</string>
    <string name="title_activity_chatlist">Chatlist</string>
    <string name="title_activity_trusted">Trusted Contacts</string>

    <string name="widget_call">Fake Call</string>
    <string name="widget_sos">SOS</string>

    <string-array name="sample_names">
        <item>Kenny Hudson </item>
        <item>Ramiro Cox </item>
        <item>Nathaniel Saunders </item>
        <item>Lawrence Moore </item>
        <item>Rosemary Johnson </item>
        <item>Marlon Vaughn </item>
        <item>Jorge Dixon </item>
        <item>Hector Kelly </item>
        <item>April Thornton </item>
        <item>Gertrude Thomas </item>
        <item>Jeremiah Deen </item>
        <item>Sheen Lucas </item>
    </string-array>

    <string-array name="sample_text">
        <item>Are John and Jane very intelligent?</item>
        <item>Frank  must work for a few hours.</item>
        <item>Jill  isn\'t very busy now.</item>
        <item>Turn left at the corner.</item>
        <item>Awesome party last night!</item>
        <item>You\'re such a killjoy.</item>
        <item>I love you!</item>
        <item>Did you watch the Oscars last night?</item>
        <item>Please get some milk for me.</item>
        <item>Submit your report by monday.</item>
        <item>Wavit rocks!</item>
        <item>Bend it like Beckham ...</item>
    </string-array>

    <string name="please_help">Please help. Your help might save someones life.</string>
    <string name="default_sos">I am in trouble. Help me.</string>
    <string name="save">Save the person</string>
    <string name="download_app">Please help me be safe. Install SOS App by clicking the link http://www.google.com</string>
    <string name="call">Call</string>
    <string name="delete">Delete</string>
    <string name="remind">Remind</string>
    <string name="notuser">has not yet accepted your invitation</string>
    <string name="deleteContact">will be removed from Trusted Contacts</string>
    <string name="add1">as Trusted ?</string>
    <string name="yes">Yes</string>
    <string name="no_sos">No</string>
    <string name="no">Do not save</string>
    <string name="add">Add</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="starting_sos">Starting SOS...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="alert_loading">Loading...</string>
    <string name="msg_no_user_found">No users found for chat!</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_home">Home</string>
    <string name="action_left">Left</string>
    <string name="action_middle">Chat</string>
    <string name="action_right">Right</string>
    <string name="title_activity_accept_sos">AcceptSOS</string>
    <string name="title_activity_account_details">Account Details</string>
    <string name="title_activity_first_time">"Hello "</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="cancel_sos">This will de-activate SOS.</string>
    <string name="cur_loc">Current Location:</string>
    <string name="coming">people are coming to help</string>

    <!-- Settings Page Strings -->
    <string name="settings">Settings</string>
    <string name="pref_distance">pref_distance</string>
    <string name="pref_distance_title">Distance</string>
    <string name="pref_distance_summary">Specify search radius for local help</string>

    <string-array name="pref_distance_entries">
        <item>500 m</item>
        <item>1 km</item>
        <item>10 km</item>
        <item>50 km</item>
    </string-array>
    <string-array name="pref_distance_entriesValues">
        <item>500</item>
        <item>1000</item>
        <item>10000</item>
        <item>50000</item>
    </string-array>

    <string name="pref_share_title">Always Share</string>
    <string name="pref_share_summary">Your current location will be shared with your trusted contacts</string>

    <string name="pref_commode_title">Permissions</string>

    <string name="pref_call_title">Phone Call</string>
    <string name="pref_call_summary">Allow to make phone call to contact</string>

    <string name="pref_email_title">Email</string>
    <string name="pref_email_summary">Allow to send email to contact</string>

    <string name="pref_sms_title">SMS</string>
    <string name="pref_sms_summary">Allow to send SMS to contact</string>

    <string name="title_activity_full_map">Nearby People</string>

    <string name="started_at">Started at</string>
</resources>
