<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:padding="20dp"
    android:layout_height="match_parent">



        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img"
            android:src="@drawable/sample_man"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_gravity="center_horizontal"
            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User"

        android:textSize="24sp"
        android:textStyle="bold"
        android:id="@+id/name"
        android:layout_gravity="center_horizontal" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kharagpur"
        android:textSize="20sp"
        android:id="@+id/phone"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="8902551989"
        android:id="@+id/email"
        android:layout_gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notuserlayout"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/notuser"
            android:text="@string/notuser"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rembtn"
            android:text="@string/remind"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/callbtn"
            android:text="@string/call"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delbtn"
            android:text="@string/delete"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
</LinearLayout>