<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img"
            android:src="@drawable/sample_man"
            android:layout_width="60dip"
            android:layout_alignParentLeft="true"
            android:layout_height="60dip"
            android:layout_gravity="center_horizontal"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="90dp"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:id="@+id/name"
         />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="91111"
        android:textSize="16sp"
        android:id="@+id/phone"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="8902551989"
        android:visibility="invisible"
        android:id="@+id/email"
         />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/notuserlayout"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/notuser"
            android:visibility="gone"
            android:text="@string/notuser"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rembtn"
            android:text="@string/remind"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/callbtn"
            android:text="@string/call"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delbtn"
            android:text="@string/delete"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>