<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#fff"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/map"
    tools:context="kgp.tech.interiit.sos.MapsActivity"
    android:name="com.google.android.gms.maps.SupportMapFragment" />

<!--<android.support.design.widget.FloatingActionButton-->
<!--android:id="@+id/fab"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_gravity="bottom|end"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_margin="16dp"-->
    <!--android:src="@drawable/ic_msg"-->
<!--android:onClick="openchat"-->
    <!--app:elevation="6dp"-->
<!--app:pressedTranslationZ="12dp"/>-->

    <lt.lemonlabs.android.expandablebuttonmenu.ExpandableMenuOverlay
        xmlns:ebm="http://schemas.android.com/apk/res-auto"

        android:id="@+id/button_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/circle"
        ebm:dimAmount="0.8"
        ebm:mainButtonSize="0.2"
        ebm:otherButtonSize="0.18"
        ebm:closeButtonSrc="@drawable/circle"
        ebm:leftButtonSrc="@drawable/circle"
        ebm:midButtonSrc="@drawable/circle"
        ebm:rightButtonSrc="@drawable/circle"
        ebm:leftButtonText="@string/action_left"
        ebm:midButtonText="@string/action_middle"
        ebm:rightButtonText="@string/action_right"
        />

    </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/left_drawer"
        android:layout_width="304dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff"
        android:orientation="vertical" >





        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="304dp"

            android:padding="20dp"
            android:id="@+id/image_view"
            android:background="@drawable/gradient"
            android:layout_height="190dp">



            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:src="@drawable/sample_man"
                android:layout_width="100dip"
                android:layout_height="100dip"
                android:layout_gravity="center_horizontal|center_vertical"
                />



            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Entrepreneurship Cell"-->
            <!--android:textColor="#ffffff"-->
            <!--android:textSize="24sp"-->
            <!--android:textStyle="bold"-->
            <!--android:id="@+id/textView"-->
            <!--android:layout_gravity="center_horizontal" />-->


            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="IIT Kharagpur"-->
            <!--android:textColor="#ffffff"-->
            <!--android:textSize="20sp"-->
            <!--android:id="@+id/designation"-->
            <!--android:layout_gravity="center_horizontal" />-->

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="#ffffff"-->
            <!--android:text="info@ecell-iitkgp.org"-->
            <!--android:id="@+id/email"-->
            <!--android:layout_gravity="center_horizontal" />-->
        </LinearLayout>


        <!-- Nav drawer -->
        <ListView
            android:id="@+id/list_view_drawer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:background="#fff"
            android:layout_below="@id/image_view"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"/>

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>

